character design page added

--- a/2d-and-3d-floor-plan-service.html
+++ b/2d-and-3d-floor-plan-service.html
@@ -27,8 +27,7 @@
 	<div id="progress-bar"></div>
 	<!-- End Progress Bar -->
 
-	<!-- Start Header -->
-	<header class="header-pr nav-bg-w main-header navfix fixed-top menu-white">
+	<header class="nav-bg-b main-header navfix fixed-top menu-white">
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo">
@@ -48,7 +47,7 @@
 										<div class="row">
 											<div class="col-md-3 megamenu">
 												<h5 class="megamenu-heading">About Us</h5>
-												<div class="menu-item-description">A full-cycle software and mobile app development company with a world-class team of innovators.</div>
+												<p class="menu-description">A full-cycle software and mobile app development company with a world-class team of innovators.</p>
 											</div>
 											<div class="col-md-3 megamenu">
 												<h5 class="megamenu-heading">Explore</h5>
@@ -59,7 +58,7 @@
 															<div class="menu-item-description">Our Proces Development</div>
 														</a>
 													</li>
-													<li class="py-4">
+													<li>
 														<a href="clients.html">
 															<div class="menu-item-title">Clients</div>
 															<div class="menu-item-description">Our Global Clients</div>
@@ -76,7 +75,7 @@
 															<div class="menu-item-description">What our clients have to say</div>
 														</a>
 													</li>
-													<li class="py-4">
+													<li>
 														<a href="career.html">
 															<div class="menu-item-title">Careers</div>
 															<div class="menu-item-description">Build your careers with us</div>
@@ -106,26 +105,116 @@
 								<div class="sub-menu-section">
 									<div class="container">
 										<div class="sub-menu-center-block">
-											<div class="sub-menu-column">
+											<div class="col-md-3 megamenu">
+												<h5 class="megamenu-heading">Services</h5>
 												<ul>
-													<li><a href="game-development.html">Game Development</a></li>
-													<li><a href="metaverse-development.html">Metaverse Development</a></li>
-													<li><a href="website-development.html">Website Development</a></li>
-													<li><a href="2d-and-3d-design-services.html">2D & 3D Design Services</a></li>
+													<li>
+														<a href="mobile-app-development.html">
+															<div class="menu-item-title">Mobile App Development</div>
+															<div class="menu-item-description">Android, iOS, Web & Cross Platform Apps</div>
+														</a>
+													</li>
+													<li>
+														<a href="game-development.html">
+															<div class="menu-item-title">Game Development</div>
+															<div class="menu-item-description">2D, 3D, AR, VR & MR Games</div>
+														</a>
+													</li>
+													<li>
+														<a href="animation-services.html">
+															<div class="menu-item-title">Animation Services</div>
+															<div class="menu-item-description">2D, 3D, Logo & Character Animation</div>
+														</a>
+													</li>
+													<li>
+														<a href="metaverse-development.html">
+															<div class="menu-item-title">Metaverse Development</div>
+															<div class="menu-item-description">NFT, E-Commerce & Social Media</div>
+														</a>
+													</li>
+													<li>
+														<a href="website-development.html">
+															<div class="menu-item-title">Website Development</div>
+															<div class="menu-item-description">WordPress, PHP & Custom Website</div>
+														</a>
+													</li>
 												</ul>
 											</div>
-											<div class="sub-menu-column">
+											<div class="col-md-3 megamenu">
+												<h5 class="megamenu-heading">&nbsp;</h5>
 												<ul>
-													<li><a href="virtual-reality-development.html">Virtual Reality Development</a>	</li>
-													<li><a href="mixed-reality-development.html">Mixed Reality Development</a></li>
-													<li><a href="industrial-automation.html">Industrial Automation</a></li>
+													<li>
+														<a href="extended-reality-development.html">
+															<div class="menu-item-title">Extended Reality Development</div>
+															<div class="menu-item-description">Modern XR Apps</div>
+														</a>
+													</li>
+													<li>
+														<a href="augmented-reality-development.html">
+															<div class="menu-item-title">Augmented Reality Development</div>
+															<div class="menu-item-description">Modern AR Apps</div>
+														</a>
+													</li>
+													<li>
+														<a href="virtual-reality-development.html">
+															<div class="menu-item-title">Virtual Reality Development</div>
+															<div class="menu-item-description">Modern VR Apps</div>
+														</a>
+													</li>
+													<li>
+														<a href="mixed-reality-development.html">
+															<div class="menu-item-title">Mixed Reality Development</div>
+															<div class="menu-item-description">Modern MR Apps</div>
+														</a>
+													</li>
 												</ul>
 											</div>
-											<div class="sub-menu-column">
+											<div class="col-md-3 megamenu">
+												<h5 class="megamenu-heading">&nbsp;</h5>
 												<ul>
-													<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
-													<li><a href="mobile-app-development.html">Mobile App Development</a></li>
-													<li><a href="animation-services.html">Animation Services</a></li>
+													<li>
+														<a href="3d-exterior-rendering-services.html">
+															<div class="menu-item-title">3D Exterior Rendering Service</div>
+															<div class="menu-item-description">3D Exterior Rendering</div>
+														</a>
+													</li>
+													<li>
+														<a href="3d-interior-rendering-services.html">
+															<div class="menu-item-title">3D Interior Rendering Service</div>
+															<div class="menu-item-description">3D Interior Rendering</div>
+														</a>
+													</li>
+													<li>
+														<a href="2d-and-3d-floor-plan-service.html">
+															<div class="menu-item-title">2D 3D Floor Plan Service</div>
+															<div class="menu-item-description">2D 3D Floor Plan</div>
+														</a>
+													</li>
+												</ul>
+											</div>
+											<div class="col-md-3">
+												<h5 class="megamenu-heading">How We Work</h5>
+												<ul class="header-process">
+													<li>
+														<div class="header-process-title">Analysis</div>
+														<div class="header-process-description">Study Business Analysis</div>
+													</li>
+													<li>
+														<div class="header-process-title">Design</div>
+														<div class="header-process-description">Creative UI/UX Designs</div>
+													</li>
+													<li>
+														<div class="header-process-title">Development</div>
+														<div class="header-process-description">Agile Process Development</div>
+													</li>
+													<li>
+														<div class="header-process-title">Testing</div>
+														<div class="header-process-description">Quality QA and Testing</div>
+													</li>
+													<li>
+														<div class="header-process-title">Deployment</div>
+														<div class="header-process-description">Full Functionality Product Deliver</div>
+													</li>
 												</ul>
 											</div>
 										</div>
@@ -138,8 +227,8 @@
 								<div class="sub-menu-section">
 									<div class="container">
 										<div class="sub-menu-center-block">
-										<div class="sub-menu-column">
-											<ul class="mainmenu">
+											<div class="sub-menu-column">
+												<ul>
 													<li><a href="#">Mobile Apps Development</a>
 														<ul class="submenu">
 															<li><a href="booking-app.html">Booking App</a></li>
@@ -153,70 +242,37 @@
 															<li><a href="sport-app.html">Sport App</a></li>
 														</ul>
 													</li>
-													<!-- <li><a href="#">Game Development</a>
-														<ul class="submenu">
-															<li><a href="#">Game</a></li>
-															<li><a href="#">Game</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Metaverse Development</a>
-														<ul class="submenu">
-															<li><a href="#">Metaverse</a></li>
-															<li><a href="#">Metaverse</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Website Development</a>
-														<ul class="submenu">
-															<li><a href="#">Website</a></li>
-															<li><a href="#">Website</a></li>
-														</ul>
-													</li> -->
 												</ul>
 											</div>
-											<!-- <div class="sub-menu-column">
+											<div class="sub-menu-column">
 												<ul>
-													<li><a href="#">Virtual Reality Development</a>
+													<li><a href="#">Interactive Touch Screen</a>
 														<ul class="submenu">
-															<li><a href="#">Virtual Reality</a></li>
-															<li><a href="#">Virtual Reality</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Mixed Reality Development</a>
-														<ul class="submenu">
-															<li><a href="#">Mixed Reality</a></li>
-															<li><a href="#">Mixed Reality</a></li>
-														</ul>
-													</li>
-													<li><a href="#">2D & 3D Design Services</a>
-														<ul class="submenu">
-															<li><a href="#">2D & 3D Design</a></li>
-															<li><a href="#">2D & 3D Design</a></li>
+															<li><a href="smart-drive.html">Smart Drive</a></li>
+															<li><a href="smart-touch.html">Smart Touch</a></li>
+															<li><a href="smart-room.html">Smart Room</a></li>
 														</ul>
 													</li>
 												</ul>
-											</div> -->
-											<!-- <div class="sub-menu-column">
-												<ul>
-													<li><a href="#">Augmented Reality Development</a>
+											</div>
+											<div class="sub-menu-column">
+												<ul>	
+													<li><a href="#">Virtual Reality</a>
 														<ul class="submenu">
-															<li><a href="#">Augmented Reality</a></li>
-															<li><a href="#">Augmented Reality</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Industrial Automation</a>
-														<ul class="submenu">
-															<li><a href="#">Industrial Automation</a></li>
-															<li><a href="#">Industrial Automation</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Animation Services</a>
-														<ul class="submenu">
-															<li><a href="#">Animation Services</a></li>
-															<li><a href="#">Animation Services</a></li>
+															<li><a href="virtual-reality-in-real-estate.html">Real Estate Solution</a></li>
 														</ul>
 													</li>
 												</ul>
-											</div> -->
+											</div>
+											<div class="sub-menu-column">
+												<ul>	
+													<li><a href="#">Augumented Reality</a>
+														<ul class="submenu">
+															<li><a href="augmented-reality-in-real-estate.html">Real Estate Solution</a></li>
+														</ul>
+													</li>
+												</ul>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -245,7 +301,7 @@
 							</div>
 						</li>
 						<li class="hidemobile">
-							<a data-bs-toggle="modal" data-bs-target="#myModal" class="btn-br bg-btn3 btshad-b2 lnk">Request A Quote <span class="circle"></span></a>
+							<a data-bs-toggle="modal" data-bs-target="#myModal" class="niwax-btn2 lnk">Request A Quote <span class="circle"></span></a>
 						</li>
 						<li class="hidedesktop darkmodeswitch">
 							<div class="switch-wrapper">
@@ -270,24 +326,26 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about-us.html">About Us</a>
 						<ul>
-							<li><a href="our-process.html">Our Proces Development</a>
-							</li><a href="clients.html">Our Global Clients</a></li>
+							<li><a href="our-process.html">Our Process</a>
+							</li><a href="clients.html">Clients</a></li>
 							<li><a href="testimonials.html">Testimonials</a></li>
 							<li><a href="career.html">Careers</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Services</a>
 						<ul>
-							<li><a href="game-development.html">Game Development</a></li>
-							<li><a href="virtual-reality-development.html">Virtual Reality Development</a></li>
-							<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
-							<li><a href="metaverse-development.html">Metaverse Development</a></li>
-							<li><a href="mixed-reality-development.html">Mixed Reality Development</a></li>
 							<li><a href="mobile-app-development.html">Mobile App Development</a></li>
-							<li><a href="website-development.html">Website Development</a></li>
-							<li><a href="industrial-automation.html">Industrial Automation</a></li>
+							<li><a href="game-development.html">Game Development</a></li>
 							<li><a href="animation-services.html">Animation Services</a></li>
-							<li><a href="2d-and-3d-design-services.html">2D & 3D Design Services</a></li>	
+							<li><a href="metaverse-development.html">Metaverse Development</a></li>
+							<li><a href="website-development.html">Website Development</a></li>
+							<li><a href="extended-reality-development.html">Extended Reality Development</a></li>
+							<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
+							<li><a href="virtual-reality-development.html">Virtual Reality Development</a></li>
+							<li><a href="mixed-reality-development.html">Mixed Reality Development</a></li>
+							<li><a href="3d-exterior-rendering-services.html">3D Exterior Rendering Service</a></li>
+							<li><a href="3d-interior-rendering-services.html">3D Interior Rendering Service</a></li>
+							<li><a href="2d-and-3d-floor-plan-service.html">2D 3D Floor Plan Service</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Solutions</a>
@@ -305,60 +363,23 @@
 									<li><a href="sport-app.html">Sport App</a></li>
 								</ul>
 							</li>
-							<!-- <li><a href="#">Game Development</a>
+							<li><a href="#">Interactive Touch Screen</a>
 								<ul class="submenu">
-									<li><a href="#">Game</a></li>
-									<li><a href="#">Game</a></li>
+									<li><a href="smart-drive.html">Smart Drive</a></li>
+									<li><a href="smart-touch.html">Smart Touch</a></li>
+									<li><a href="smart-room.html">Smart Room</a></li>
+								</ul>
+							</li>	
+							<li><a href="#">Virtual Reality</a>
+								<ul class="submenu">
+									<li><a href="virtual-reality-in-real-estate.html">Real Estate Solution</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Metaverse Development</a>
+							<li><a href="#">Augumented Reality</a>
 								<ul class="submenu">
-									<li><a href="#">Metaverse</a></li>
-									<li><a href="#">Metaverse</a></li>
+									<li><a href="augmented-reality-in-real-estate.html">Real Estate Solution</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Website Development</a>
-								<ul class="submenu">
-									<li><a href="#">Website</a></li>
-									<li><a href="#">Website</a></li>
-								</ul>
-							</li>
-							<li><a href="#">2D & 3D Design Services</a>
-								<ul class="submenu">
-									<li><a href="#">2D & 3D Design</a></li>
-									<li><a href="#">2D & 3D Design</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Virtual Reality Development</a>
-								<ul class="submenu">
-									<li><a href="#">Virtual Reality</a></li>
-									<li><a href="#">Virtual Reality</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Mixed Reality Development</a>
-								<ul class="submenu">
-									<li><a href="#">Mixed Reality</a></li>
-									<li><a href="#">Mixed Reality</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Industrial Automation</a>
-								<ul class="submenu">
-									<li><a href="#">Industrial Automation</a></li>
-									<li><a href="#">Industrial Automation</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Augmented Reality Development</a>
-								<ul class="submenu">
-									<li><a href="#">Augmented Reality</a></li>
-									<li><a href="#">Augmented Reality</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Animation Services</a>
-								<ul class="submenu">
-									<li><a href="#">Animation Services</a></li>
-									<li><a href="#">Animation Services</a></li>
-								</ul>
-							</li> -->
 						</ul>
 					</li>
 					<li><a href="portfolio.html">Portoflio</a></li>
