--- a/index.html
+++ b/index.html
@@ -26,17 +26,6 @@
 	<div id="progress-bar"></div>
 	<!-- End Progress Bar -->
 
-	<!-- Start Preloader -->
-	<!-- <div class="onloadpage" id="page_loader">
-		<div class="pre-content">
-			<div class="logo-pre">
-				<img src="images/logo.png" alt="Logo" class="img-fluid" />
-			</div>
-			<div class="pre-text- text-radius text-light text-animation bg-b">Futurealiti - Ideas Into Reality</div>
-		</div>
-	</div> -->
-	<!-- End Preloader -->
-
 	<!-- Start Header -->
 	<header class="nav-bg-b main-header navfix fixed-top menu-white">
 		<div class="container-fluid m-pad">
@@ -271,7 +260,6 @@
 													<li><a href="#">Virtual Reality</a>
 														<ul class="submenu">
 															<li><a href="virtual-reality-in-real-estate.html">Real Estate Solution</a></li>
-															<li><a href="#">Metaverse</a></li>
 														</ul>
 													</li>
 												</ul>
@@ -338,24 +326,23 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about-us.html">About Us</a>
 						<ul>
-							<li><a href="our-process.html">Our Proces Development</a>
-							</li><a href="clients.html">Our Global Clients</a></li>
+							<li><a href="our-process.html">Our Process</a>
+							</li><a href="clients.html">Clients</a></li>
 							<li><a href="testimonials.html">Testimonials</a></li>
 							<li><a href="career.html">Careers</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Services</a>
 						<ul>
-							<li><a href="game-development.html">Game Development</a></li>
-							<li><a href="virtual-reality-development.html">Virtual Reality Development</a></li>
-							<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
-							<li><a href="metaverse-development.html">Metaverse Development</a></li>
-							<li><a href="mixed-reality-development.html">Mixed Reality Development</a></li>
 							<li><a href="mobile-app-development.html">Mobile App Development</a></li>
-							<li><a href="website-development.html">Website Development</a></li>
-							<li><a href="industrial-automation.html">Industrial Automation</a></li>
+							<li><a href="game-development.html">Game Development</a></li>
 							<li><a href="animation-services.html">Animation Services</a></li>
-							<li><a href="2d-and-3d-design-services.html">2D & 3D Design Services</a></li>	
+							<li><a href="metaverse-development.html">Metaverse Development</a></li>
+							<li><a href="website-development.html">Website Development</a></li>
+							<li><a href="extended-reality-development.html">Extended Reality Development</a></li>
+							<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
+							<li><a href="virtual-reality-development.html">Virtual Reality Development</a></li>
+							<li><a href="mixed-reality-development.html">Mixed Reality Development</a></li>
 							<li><a href="3d-exterior-rendering-services.html">3D Exterior Rendering Service</a></li>
 							<li><a href="3d-interior-rendering-services.html">3D Interior Rendering Service</a></li>
 							<li><a href="2d-and-3d-floor-plan-service.html">2D 3D Floor Plan Service</a></li>
@@ -385,14 +372,12 @@
 							</li>	
 							<li><a href="#">Virtual Reality</a>
 								<ul class="submenu">
-									<li><a href="#">Real Estate Solution</a></li>
-									<li><a href="#">Metaverse</a></li>
+									<li><a href="virtual-reality-in-real-estate.html">Real Estate Solution</a></li>
 								</ul>
 							</li>
 							<li><a href="#">Augumented Reality</a>
 								<ul class="submenu">
-									<li><a href="#">Website</a></li>
-									<li><a href="#">Website</a></li>
+									<li><a href="augmented-reality-in-real-estate.html">Real Estate Solution</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -436,7 +421,8 @@
 				<div class="col-lg-5">
 					<div class="hero-heading-sec">
 						<h2 class="wow fadeIn" data-wow-delay="0.3s"><span>Web.</span> <span>Mobile.</span> <span>Virtual Reality.</span> <span>Augmented Reality.</span></h2>
-						<p class="wow fadeIn" data-wow-delay="0.6s">Website and App development solution for transforming and innovating businesses.</p> <a href="case-study.html" class="niwax-btn2 wow fadeIn" data-wow-delay="0.8s">View Case Studies <i class="fas fa-chevron-right fa-ani"></i></a>
+						<p class="wow fadeIn" data-wow-delay="0.6s">Website and App development solution for transforming and innovating businesses.</p>
+						<a href="case-studies.html" class="niwax-btn2 wow fadeIn" data-wow-delay="0.8s">View Case Studies <i class="fas fa-chevron-right fa-ani"></i></a>
 						<div class="awards-block-tt  wow fadeIn" data-wow-delay="1s"><img src="images/hero/awards-logo.png" alt="awards-logo" class="img-fluid" /></div>
 					</div>
 				</div>
@@ -547,7 +533,7 @@
 			<div class="row justify-content-center text-center">
 				<div class="col-lg-10">
 					<div class="common-heading">
-						<span>We Are Creative Agency</span>
+						<span class="text-center">We Are Creative Agency</span>
 						<h2 class="mb30 text-center"><span class="text-second">Top-rated</span> Web And Mobile App Development Company</h2>
 						<p class="text-center">Futurealiti is a leading Web/ App development company with an award-winning team. The main aim of Futurealiti is to develop a Client-Focused, Customer-Centric, and Flexible Web and App solution for their clients so they can scale their business upto 10x times. We Help you improve your branding, increase conversion rates and maximize your revenue.</p>
 						<h3 class="mt30 mb30 text-center">Our High-End Mobile App Development Services</h3>
