character design updated

--- a/game-development.html
+++ b/game-development.html
@@ -1498,14 +1498,14 @@
     <section class="process-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-8 text-center">
+				<div class="col-lg-8 text-center wow fadeInDown">
 					<h2 class="text-white">Game Development Process</h2>
 					<p class="text-white">Our game development approach is effective and efficient. We collaborate closely with all of our clients to create a bespoke timetable that fits the demands of your project.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
+					<div class="ptag wow fadeInUp">
 						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
 							<div class="vertical-timeline-item vertical-timeline-element">
 								<div>
@@ -1575,7 +1575,7 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
+					<div class="ptag wow fadeInUp">
 						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
 							<div class="vertical-timeline-item vertical-timeline-element">
 								<div>
@@ -1973,8 +1973,8 @@
                 <div class="col-sm-12 col-md-10">
                     <div class="common-heading ptag">
 						<span class="text-white">POWER YOUR IMAGINATION</span>
-                        <h2 class="text-white">Why Choose Us</h2>
-                        <p class="pb-3 text-white">We provide high-quality game development to clients all around the world. To produce excellent tales and exceptional gaming experiences, our team of tech-savvy game developers goes beyond the frontier of imagination.</p>
+                        <h2 class="text-white text-center">Why Choose Us</h2>
+                        <p class="pb-3 text-white text-center">We provide high-quality game development to clients all around the world. To produce excellent tales and exceptional gaming experiences, our team of tech-savvy game developers goes beyond the frontier of imagination.</p>
                     </div>
                 </div>
             </div>
